--- a/src/app/components/process/process.component.html
+++ b/src/app/components/process/process.component.html
@@ -1,4 +1,5 @@
 <div>
+    <!-- Guardar valores del proceso -->
     Nombre:
     <input type="text" name="name" [(ngModel)]="process.name" >
     Rafaga de CPU:
@@ -6,9 +7,11 @@
     Tiempo de Llegada:
     <input type="number" name="arrivalTime" [(ngModel)]="process.arrivalTime" >
     <button type="submit" (click) = 'addProcess(process)'>Agregar Proceso</button>
+    <!-- Guardar valores del proceso -->
 </div>
-
+<br>
 <div>
+    <!-- Mostramos valores en la tabla, conforme se vayan ingresando -->
     Tabla:
     <table mat-table>
         <thead>
@@ -26,12 +29,14 @@
             </tr>
         </tbody>
     </table>
+        <!-- Mostramos valores en la tabla, conforme se vayan ingresando -->
 </div>
-
+<br>
 <div>
     <button (click) = 'fifo()'>Aplicar fifo </button>
 </div>
-
+<br>
+<!-- Mostramos valores calculados en la tabla is_clicked es la bandera que estaba en el archivo .ts, dependiendo del estado esta seccion se muestra o no -->
 <div *ngIf = is_clicked>
     Tabla de Resultados:
     <table>
@@ -50,4 +55,5 @@
             </tr>
         </tbody>
     </table>
+    <!-- Mostramos valores calculados en la tabla -->
 </div>
