--- a/src/app/components/process/process.component.html
+++ b/src/app/components/process/process.component.html
@@ -1,5 +1,5 @@
 <section id="add-process">
-    <div class="container">
+    <div class="container mt-4 mb-4">
         <div class="card col">
             <!-- Guardar valores del proceso -->
             <br>
@@ -63,9 +63,9 @@
 <section id="grant-chart">
     <div class="card-body" *ngIf=is_clicked>
         <!-- Grafica -->
-        <div class="container">
+        <div class="container mb-4">
             <div class="row justify-content-center">
-
+                
                 <div>
                     <p class="text-right small pb-0">0</p>
                 </div>
