Solo borre una condicion que yo mismo puse y que no tenia funcionalidad

--- a/src/app/components/process/process.component.html
+++ b/src/app/components/process/process.component.html
@@ -15,7 +15,7 @@
                 <input min="0" type="number" name="arrivalTime" class="form-control" placeholder="Ingrese tiempo de llegada"
                     [(ngModel)]="process.arrivalTime" required>
                 <br>
-                <button type="submit" class="btn btn-secondary" (click)='addProcess(process)' [disabled]="f.invalid">Agregar Proceso</button>
+                <button type="submit" class="btn btn-secondary" (click)='addProcess(process)'>Agregar Proceso</button>
                 <!-- Guardar valores del proceso -->
                 <br>
             </form>
