Agregado un footere simple

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Navbar -->
 <header>
     <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
@@ -33,5 +34,21 @@
         </div>
     </div>
 </header>
+<!-- Fin navbar -->
 
 <router-outlet></router-outlet>
+
+
+<!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4">
+
+
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright
+
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Fin footer -->
