--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4">
+<footer class="page-footer font-small special-color-dark ">
 
 
 
